# openethereum

./: .rustfmt.toml  Cargo.toml
.github/workflows/: build-test-windows.yml  build-test.yml  check.yml  fmt.yml
crates/accounts/ethkey/: Cargo.toml
crates/concensus/ethash/: Cargo.toml
crates/concensus/ethash/src/: compute.rs  keccak.rs  lib.rs  progpow.rs
crates/concensus/miner/: Cargo.toml
crates/concensus/miner/src/: gas_pricer.rs  lib.rs  work_notify.rs
crates/concensus/miner/src/pool/: queue.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs  signature.rs
crates/db/db/: Cargo.toml
crates/db/db/src/: cache_manager.rs  db.rs  keys.rs
crates/db/hash-db-0.12.4/: .cargo_vcs_info.json  Cargo.toml
crates/db/hash-db-0.12.4/src/: lib.rs
crates/db/journaldb/: Cargo.toml
crates/db/journaldb/src/: archivedb.rs  as_hash_db_impls.rs  earlymergedb.rs  lib.rs  oracle.rs  overlaydb.rs  overlayrecentdb.rs  refcounteddb.rs  traits.rs
crates/db/memory-db/: Cargo.toml
crates/db/memory-db/benches/: bench.rs
crates/db/memory-db/src/: lib.rs
crates/db/patricia-trie-ethereum/: Cargo.toml
crates/db/patricia-trie-ethereum/src/: lib.rs  rlp_node_codec.rs
crates/db/trie-db-0.12.4/: Cargo.toml  Cargo.toml.orig
crates/db/trie-db-0.12.4/benches/: bench.rs
crates/db/trie-db-0.12.4/src/: fatdb.rs  fatdbmut.rs  lib.rs  lookup.rs  nibbleslice.rs  nibblevec.rs  node.rs  node_codec.rs  recorder.rs  sectriedb.rs  sectriedbmut.rs  triedb.rs  triedbmut.rs
crates/ethcore/: Cargo.toml
crates/ethcore/benches/: builtin.rs
crates/ethcore/blockchain/: Cargo.toml
crates/ethcore/blockchain/src/: blockchain.rs  generator.rs  lib.rs
crates/ethcore/src/: account_db.rs  block.rs  digest.rs  error.rs  executed.rs  executive.rs  externalities.rs  factory.rs  lib.rs  pod_account.rs  pod_state.rs  riscv.rs  state_db.rs  test_helpers.rs  transaction_ext.rs
crates/ethcore/src/client/: chain_notify.rs  client.rs  config.rs  evm_test_client.rs  io_message.rs  mod.rs  riscv.rs  test_client.rs  traits.rs
crates/ethcore/src/engines/: basic_authority.rs  block_reward.rs  instant_seal.rs  l2_engine.rs  mod.rs  null_engine.rs
crates/ethcore/src/engines/authority_round/: mod.rs
crates/ethcore/src/engines/clique/: mod.rs
crates/ethcore/src/ethereum/: ethash.rs  mod.rs
crates/ethcore/src/json_tests/: chain.rs  executive.rs  local.rs  mod.rs  runner.rs  state.rs  test_common.rs  transaction.rs  trie.rs
crates/ethcore/src/machine/: impls.rs  traits.rs
crates/ethcore/src/miner/: miner.rs  mod.rs  pool_client.rs  stratum.rs
crates/ethcore/src/spec/: genesis.rs  mod.rs  seal.rs  spec.rs
crates/ethcore/src/state/: account.rs  backend.rs  mod.rs  substate.rs
crates/ethcore/src/tests/: blockchain.rs  client.rs  mod.rs  trace.rs
crates/ethcore/src/trace/: db.rs  executive_tracer.rs  import.rs  mod.rs  noop_tracer.rs
crates/ethcore/src/trace/types/: error.rs  filter.rs  flat.rs  localized.rs  mod.rs  trace.rs
crates/ethcore/src/verification/: canon_verifier.rs  mod.rs  noop_verifier.rs  verification.rs  verifier.rs
crates/ethcore/src/verification/queue/: kind.rs  mod.rs
crates/ethcore/types/: Cargo.toml
crates/ethcore/types/src/: account_diff.rs  block.rs  blockchain_info.rs  data_format.rs  encoded.rs  filter.rs  header.rs  ids.rs  lib.rs  log_entry.rs  receipt.rs  snapshot_manifest.rs  state_diff.rs  trace_filter.rs  tree_route.rs
crates/ethcore/types/src/engines/: mod.rs
crates/ethcore/types/src/transaction/: error.rs  mod.rs  transaction.rs  transaction_id.rs
crates/ethcore/types/src/views/: block.rs  body.rs  header.rs  mod.rs  typed_transaction.rs  view_rlp.rs
crates/ethjson/src/: bytes.rs  hash.rs  lib.rs  maybe.rs  uint.rs
crates/ethjson/src/blockchain/: account.rs  block.rs  blockchain.rs  header.rs  mod.rs  state.rs  test.rs  transaction.rs
crates/ethjson/src/local_tests/: mod.rs
crates/ethjson/src/spec/: account.rs  builtin.rs  engine.rs  ethash.rs  genesis.rs  mod.rs  null_engine.rs  params.rs  seal.rs  state.rs  step_duration.rs
crates/ethjson/src/state/: log.rs  mod.rs  state.rs  test.rs  transaction.rs
crates/ethjson/src/test/: mod.rs
crates/ethjson/src/transaction/: mod.rs  test.rs  transaction.rs  txtest.rs
crates/ethjson/src/trie/: input.rs  mod.rs  test.rs  trie.rs
crates/ethjson/src/vm/: call.rs  env.rs  mod.rs  test.rs  transaction.rs  vm.rs
crates/util/EIP-152/: Cargo.toml
crates/util/EIP-152/src/: lib.rs
crates/util/crypto/: Cargo.toml
crates/util/crypto/src/: lib.rs
crates/util/keccak-hasher/: Cargo.toml
crates/util/keccak-hasher/src/: lib.rs
crates/util/macros/src/: lib.rs
crates/util/memory-cache/src/: lib.rs
crates/util/rlp-compress/src/: lib.rs
crates/util/rlp-compress/tests/: compress.rs
crates/util/rlp-derive/src/: de.rs  en.rs
crates/util/triehash-0.5.0/: Cargo.toml
crates/util/triehash-0.5.0/src/: lib.rs
crates/util/triehash-ethereum/: Cargo.toml
crates/util/triehash-ethereum/src/: lib.rs
crates/util/unexpected/src/: lib.rs
crates/vm/builtin/: Cargo.toml
crates/vm/builtin/src/: lib.rs
crates/vm/call-contract/: Cargo.toml
crates/vm/evm/: Cargo.toml
crates/vm/evm/benches/: basic.rs
crates/vm/evm/src/: evm.rs  factory.rs  instructions.rs  lib.rs  tests.rs  vmtype.rs
crates/vm/evm/src/interpreter/: gasometer.rs  informant.rs  memory.rs  mod.rs  shared_cache.rs  stack.rs
crates/vm/vm/: Cargo.toml
crates/vm/vm/src/: access_list.rs  action_params.rs  env_info.rs  error.rs  ext.rs  lib.rs  return_data.rs  schedule.rs  tests.rs
src/: lib.rs
