[package]
description = "OpenEthereum"
name = "openethereum"
# NOTE Make sure to update util/version/Cargo.toml as well
version = "3.3.4"
license = "GPL-3.0"
authors = [
	"OpenEthereum developers",
	"Parity Technologies <admin@parity.io>"
]

[lib]

[dependencies]
ethcore = {path = "crates/ethcore"}

[features]
json-tests = ["ethcore/json-tests"]

[profile.test]
lto = false
opt-level = 3 # makes tests slower to compile, but faster to run

[profile.release]
debug = false
lto = true

[workspace]
# This should only list projects that are not
# in the dependency tree in any other way
# (i.e. pretty much only standalone CLI tools)
members = [
	"crates/crypto",
	"crates/ethcore"
]
