[package]
description = "Riscv L2 Chain"
name = "riscv-l2chain"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
ethcore = {path = "crates/ethcore", default-features = false}

[features]
json-tests = ["ethcore/json-tests"]

[profile.test]
lto = false
opt-level = 3 # makes tests slower to compile, but faster to run

[profile.release]
debug = false
lto = true

[workspace]
# This should only list projects that are not
# in the dependency tree in any other way
# (i.e. pretty much only standalone CLI tools)
members = [
	"crates/crypto",
	"crates/ethcore"
]
