[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = {version = "0.9.2", default-features = false}
keccak-hash = {version = "0.5.0", default-features = false }
rustc-hex = {version = "2.1.0", default-features = false }
parity-crypto = { version = "0.6.2", features = [ "publickey" ], optional = true }
sha2 = {version="0.8.0", default-features = false}
ripemd160= {version="0.8.0", default-features=false}
digest={version="0.8.1",default-features=false}

[features]
default = ["std"]
std = ["parity-crypto"]
