[package]
description = "OpenEthereum (EthCore) Library"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "ethcore"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ansi_term = "0.10"
blooms-db = { path = "../db/blooms-db", optional = true }
common-types = { path = "types" }
crossbeam-channel = {version = "0.5.2", optional = true}
eip-152 = { version = "0.1", path = "../util/EIP-152" }
env_logger = { version = "0.5", optional = true }
error-chain = { version = "0.12", default-features = false }
ethash = { path = "../concensus/ethash" }
ethcore-blockchain = { path = "./blockchain" }
ethcore-builtin = { path = "../vm/builtin" }
ethcore-db = { path = "../db/db" }
ethereum-types = "0.9.2"
ethjson = { path = "../ethjson" }
evm = { path = "../vm/evm" }
globset = {version = "0.4", optional = true}
hash-db = {path = "../db/hash-db-0.12.4"}
itertools = "0.5"
journaldb = { path = "../db/journaldb" }
keccak-hash = {version = "0.5.0", default-features = false}
keccak-hasher = { path = "../util/keccak-hasher", default-features = false }
kvdb = "0.1"
kvdb-memorydb = "0.1"
log = "0.4"
lru-cache = "0.1"
macros = { path = "../util/macros" }
maplit = "1"
memory-cache = { path = "../util/memory-cache" }
memory-db = { path = "../db/memory-db" }
parity-bytes = "0.1"
parity-crypto = { version = "0.6.2", features = [ "publickey" ] }
parking_lot = "0.11.1"
trie-db = {path = "../db/trie-db-0.12.4"}
patricia-trie-ethereum = { path = "../db/patricia-trie-ethereum" }
rlp = { version = "0.4.6" }
rlp_derive = { path = "../util/rlp-derive" }
rustc-hex = {version = "2.1", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
triehash-ethereum = { version = "0.2",  path = "../util/triehash-ethereum" }
unexpected = { path = "../util/unexpected", default-features = false }
vm = { path = "../vm/vm" }
tempdir = {version="0.3", optional = true}
tempfile = {version = "3.1.0", optional = true}
walkdir = {version = "2.3", optional = true}
rayon = {version = "1.1", optional = true}
regex = {version = "1.3.9", optional = true}

[dev-dependencies]
rand = "0.7.3"
blooms-db = { path = "../db/blooms-db" }
criterion = "0.2"
env_logger = "0.5"
hex-literal = "0.2.1"
rlp_compress = { path = "../util/rlp-compress" }
tempdir = "0.3"
trie-standardmap = "0.15.2"
crossbeam-channel = "0.5.2"

[features]
parity = []

# Disables seal verification for mined blocks.
# This allows you to submit any seal via RPC to test and benchmark
# how fast pending block get's created while running on the mainnet.
miner-debug = []
# Display EVM debug traces.
evm-debug = ["evm/evm-debug"]
# Display EVM debug traces when running tests.
evm-debug-tests = ["evm-debug", "evm/evm-debug-tests"]
# Measure time of transaction execution.
# Whenever the transaction execution time (in millis) exceeds the value of
# SLOW_TX_DURATION env variable (provided compile time!)
# EVM debug traces are printed.
slow-blocks = []
# Run JSON consensus tests.
json-tests = ["env_logger", "test-helpers", "to-pod-full", "globset", "rayon",
	"regex", "vm/std"]
# Skip JSON consensus tests with pending issues.
ci-skip-tests = []
# Run memory/cpu heavy tests.
test-heavy = []
# Compile test helpers
test-helpers = ["tempdir", "blooms-db", "common-types/test-helpers", "walkdir",
	"tempfile", "crossbeam-channel"]
# Enables slow 'to-pod-full' method for use in tests and evmbin.
to-pod-full = []

[[bench]]
name = "builtin"
harness = false
