[package]
description = "OpenEthereum (EthCore) Library"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "ethcore"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
common-types = { path = "types", default-features = false }
eip-152 = { version = "0.1", path = "../util/EIP-152", default-features = false }
ethash = { path = "../concensus/ethash", default-features = false }
ethcore-builtin = { path = "../vm/builtin", default-features = false }
ethereum-types = {version = "0.9.2", default-features = false }
evm = { path = "../vm/evm", default-features = false }
hash-db = {path = "../db/hash-db-0.12.4", default-features = false}
itertools = {version  = "0.8", default-features = false }
keccak-hash = {version = "0.5.0", default-features = false}
keccak-hasher = { path = "../util/keccak-hasher", default-features = false }
crypto = {path = "../crypto", default-features = false}
lru = {version= "0.7.3", default-features = false }
macros = { path = "../util/macros" }
maplit = "1"
memory-db = { path = "../db/memory-db" }
parity-bytes = {version = "0.1", default-features = false}
trie-db = {path = "../db/trie-db-0.12.4", default-features = false}
patricia-trie-ethereum = { path = "../db/patricia-trie-ethereum", default-features = false }
rlp = { version = "0.4.6" }
rlp_derive = { path = "../util/rlp-derive" }
rustc-hex = {version = "2.1", default-features = false }
triehash-ethereum = { version = "0.2",  path = "../util/triehash-ethereum", default-features = false }
unexpected = { path = "../util/unexpected", default-features = false }
vm = { path = "../vm/vm", default-features = false }
serde = {version="1.0",default-features = false}
serde_json = {version = "1.0", optional = true }
ethjson = { path = "../ethjson", optional = true }
globset = {version = "0.4", optional = true}
tempdir = {version="0.3", optional = true}
tempfile = {version = "3.1.0", optional = true}
walkdir = {version = "2.3", optional = true}
rayon = {version = "1.1", optional = true}
regex = {version = "1.3.9", optional = true}
hashbrown = "0.12.0"

[dev-dependencies]
rand = "0.7.3"
criterion = "0.2"
env_logger = "0.5"
hex-literal = "0.2.1"
rlp_compress = { path = "../util/rlp-compress" }
trie-standardmap = "0.15.2"

[features]
default = ["std"]
std = ["common-types/std", "trie-db/std", "ethcore-builtin/std", "ethjson"]
# Disables seal verification for mined blocks.
# This allows you to submit any seal via RPC to test and benchmark
# how fast pending block get's created while running on the mainnet.
miner-debug = []
# Display EVM debug traces.
evm-debug = ["evm/evm-debug"]
# Display EVM debug traces when running tests.
evm-debug-tests = ["evm-debug", "evm/evm-debug-tests"]
# Measure time of transaction execution.
# Whenever the transaction execution time (in millis) exceeds the value of
# SLOW_TX_DURATION env variable (provided compile time!)
# EVM debug traces are printed.
slow-blocks = []
# Run JSON consensus tests.
json-tests = ["test-helpers", "to-pod-full", "globset", "rayon",
	"regex", "vm/std", "serde_json"]
# Compile test helpers
test-helpers = ["tempdir", "common-types/test-helpers", "walkdir",
	"tempfile", "std"]
# Enables slow 'to-pod-full' method for use in tests and evmbin.
to-pod-full = []

[[bench]]
name = "builtin"
harness = false
