[package]
description = "Parity Ethereum Ethash & ProgPoW Implementations"
name = "ethash"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ethereum-types = {version = "0.9.2", default-features = false}
keccak-hash = {version = "0.5.0", default-features = false}
tiny-keccak = {version = "2.0.2", default-features = false}
