[package]
name = "patricia-trie-ethereum"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
trie-db = {path = "../trie-db-0.12.4", default-features = false }
keccak-hasher = { version = "0.1.1", path = "../../util/keccak-hasher" }
hash-db = {path ="../hash-db-0.12.4", default-features = false }
rlp = { version = "0.4.6", default-features = false }
parity-bytes = {version = "0.1", default-features = false }
ethereum-types = {version = "0.9.2", default-features = false }
elastic-array = {version = "0.10", default-features = false }

[dev-dependencies]
memory-db = "0.11.0"
keccak-hash = "0.5.0"

[features]
std = []
