[package]
description = "Parity Ethereum Common Types"
name = "common-types"
version = "0.1.0"
edition = "2018"
authors = [
  "Gnosis Ltd <openethereum@gnosis.io>",
  "Parity Technologies <admin@parity.io>",
]

[dependencies]
ethereum-types = {version = "0.9.2", default-features = false}
keccak-hash = "0.5.0"
parity-bytes = {version = "0.1", default-features = false}
parity-crypto = { version = "0.6.2", features = [ "publickey" ] }
rlp = { version = "0.4.6", default-features = false }
rlp_derive = { path = "../../util/rlp-derive" }
unexpected = { path = "../../util/unexpected" }
serde = "1.0"
serde_repr = "0.1"

[dev-dependencies]
rustc-hex = "1.0"

[features]
test-helpers = []
