[package]
name = "keccak-hasher"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Keccak-256 implementation of the Hasher trait"
license = "GPL-3.0"

[dependencies]
ethereum-types = {version = "0.9.2", default-features = false }
tiny-keccak = {version ="1.4.2", default-features = false, features = ["keccak"] }
hash-db = {version = "0.12.0", default-features = false }
plain_hasher = {version = "0.2", default-features = false }
