[package]
name = "triehash-ethereum"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Trie-root helpers, ethereum style"
license = "GPL-3.0"
edition = "2018"

[dependencies]
triehash = { path = "../triehash-0.5.0" }
ethereum-types = {version = "0.9.2", default-features = false}
keccak-hasher = { path = "../keccak-hasher", default-features = false }
