[package]
description = "ethereum vm builtin"
name = "ethcore-builtin"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
crypto = {path = "../../crypto", default-features = false}
byteorder = {version = "1.3.2", default-features = false }
eip-152 = {path = "../../util/EIP-152", default-features = false }
ethereum-types = {version = "0.9.2", default-features = false}
num-bigint = {version = "0.4", default-features = false}
num-traits = {version = "0.2.11", default-features = false}
parity-bytes = {version = "0.1", default-features = false}
ethjson = {path = "../../ethjson", default-features=false, optional = true}
bn = { git = "https://github.com/paritytech/bn", default-features = false, optional = true }
eth_pairings = { git = "https://github.com/matter-labs/eip1962.git", optional = true, default-features = false, features = ["eip_2537"], rev = "ece6cbabc41948db4200e41f0bfdab7ab94c7af8" }

[dev-dependencies]
hex-literal = "0.2.1"
rustc-hex  = "1.0"
macros = { path = "../../util/macros" }
maplit = "1.0.2"

[features]
default = ["std"]
std = ["ethjson", "bn", "eth_pairings", "crypto/std"]
