[package]
description = "Parity Ethereum Virtual Machine (EVM) Rust Implementation"
name = "evm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bit-set = "0.5"
parity-bytes = {version = "0.1", default-features = false}
ethereum-types = {version = "0.9.2", default-features = false }
lazy_static = "1.0"
log = {version = "0.4", default-features = false }
vm = { path = "../vm", default-features = false }
keccak-hash = {version = "0.5.0", default-features = false }
parity-util-mem = { version = "0.7", default-features = false }
parking_lot = "0.11.1"
memory-cache = { path = "../../util/memory-cache" }
ethcore-builtin = { path = "../builtin" }
num-bigint = "0.2"

[dev-dependencies]
rustc-hex = "1.0"
criterion = "0.2"
hex-literal = "0.2.0"

[features]
evm-debug = []
evm-debug-tests = ["evm-debug"]

[[bench]]
name = "basic"
harness = false
