[package]
description = "Parity Ethereum Virtual Machine (EVM) Rust Implementation"
name = "evm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bit-set = {version = "0.5.2", default-features = false}
parity-bytes = {version = "0.1", default-features = false}
ethereum-types = {version = "0.9.2", default-features = false}
log = {version = "0.4", default-features = false}
vm = { path = "../vm" }
keccak-hash = "0.5.0"
parity-util-mem = "0.7"
parking_lot = "0.11.1"
memory-cache = { path = "../../util/memory-cache" }
ethcore-builtin = { path = "../builtin" }
num-bigint = "0.2"

[dev-dependencies]
rustc-hex = "1.0"
criterion = "0.2"
hex-literal = "0.2.0"

[features]
evm-debug = []
evm-debug-tests = ["evm-debug"]

[[bench]]
name = "basic"
harness = false
