[package]
description = "Parity Ethereum Virtual Machine (EVM) Rust Implementation"
name = "evm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bit-set = {version = "0.5.2", default-features = false}
parity-bytes = {version = "0.1", default-features = false}
ethereum-types = {version = "0.9.2", default-features = false}
vm = { path = "../vm", default-features = false }
keccak-hash = {version = "0.5.0", default-features = false}
ethcore-builtin = { path = "../builtin", default-features = false }
num-bigint = {version = "0.4", default-features = false}
log = {version = "0.4", default-features = false, optional = true}
hashbrown = { version = "0.11.2" }

[dev-dependencies]
rustc-hex = "1.0"
criterion = "0.2"
hex-literal = "0.2.0"

[features]
std = ["ethcore-builtin/std"]
evm-debug = ["log", "std"]
evm-debug-tests = ["evm-debug"]

[[bench]]
name = "basic"
harness = false
