[package]
description = "Virtual Machines (VM) Support Library"
name = "vm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parity-bytes = {version = "0.1", default-features = false}
ethereum-types = {version = "0.9.2", default-features = false}
patricia-trie-ethereum = { path = "../../db/patricia-trie-ethereum" }
ethjson = { path = "../../ethjson" }
rlp = { version = "0.4.6", default-features = false }
keccak-hash = {version = "0.5.0", default-features = false }
