[package]
description = "Virtual Machines (VM) Support Library"
name = "vm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-bytes = {version = "0.1", default-features = false }
ethereum-types = {version = "0.9.2", default-features = false }
patricia-trie-ethereum = { path = "../../db/patricia-trie-ethereum", default-features = false }
ethjson = { path = "../../ethjson", optional = true }
rlp = { version = "0.4.6", default-features = false }
keccak-hash = {version = "0.5.0", default-features = false }
hashbrown = { version = "0.11.2" }

[features]
default = []
std = ["ethjson"]
